Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <main>
+    <header class="header">
+      <h1 class="title">Join our community</h1>
+        <h2 class="subtitle">30-day, hassie-free money back guarantee</h2>
+          <p class="text">Gain access to our full library of tutorials along with expert code reviewers</p>
+          <p class="text">Perfect for any developers who are serious about honing their skills</p>
+    </header>
+    <section class="bottomside">
+    <section class="leftside">
+      <h2 class="sidetitle">Monthly Subscription</h2>
+      <h2 class="price"><span id="pricetag">$29</span>per month</h2>
+      <h3 class="lasttitle">Full access for less than $1 a day</h3>
+      <button class="signup">Sign Up</button>
+    </section>
+    <section class="rightside">
+      <h2 class="sidetitle">Why Us</h2>
+      <ul class="sitefeatures">
+        <li class="feature">Tutorials by industry experts</li>
+        <li class="feature">Peer & expert code review</li>
+        <li class="feature">Coding exercises</li>
+        <li class="feature">Access to our GitHub repos</li>
+        <li class="feature">Community forum</li>
+        <li class="feature">Flashcard decks</li>
+        <li class="feature">New videos every week</li>
+      </ul>
+    </section>
+  </section>
+  </main>
 </body>
 </html>
